--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
 
 
         <script  src="js/maps.js"></script>
+        <script>  $(function(){
+          var section = $(document).on('mouseenter mouseleave','.section:not(.open) .skew', function(){
+              section.toggleClass('active');
+          }).on('click', '.skew:not(.open)', function(e){
+            section.removeClass('open')
+              .add(this)
+              .addClass('open')
+              .siblings()
+              .removeClass('open');
+          }).on('click', '.skew.open', function(e){
+              section.add(this).removeClass('open');
+          })
+          .find('.section');
+        })</script>
             <script  src="js/inicio.js"></script>
 
 
