--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <ul id="menu">
                                 <a href="#t1"><li class="icon fa fa-bolt" id="uno"></li></a>
                                 <a href="#t2"><li class="icon fa fa-keyboard-o" id="dos"></li></a>
-                                <a href="#t3"><li class="icon fa fa-rocket" id="tres"></li></a>
+                                <a href="#t3"><li class="icon fa fa-file-alt" id="tres"></li></a>
                                 <a href="#t4"><li class="icon fa fa-folder-open" id="cuatro"></li></a>
                                 <a href="#t5"><li class="icon fa fa-map-marker" id="cinco"></li></a>
                             </ul>
