--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css'>
+
+
+        <!-- iconos-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <!-- iconos-->
+
         <link rel="stylesheet" href="css/style.css" type="text/css" >
         <script src="js/prefixfree.min.js"></script>
           <script  src="js/proyectos.js"></script>
@@ -39,7 +45,7 @@
                             <ul id="menu">
                                 <a href="#t1"><li class="icon fa fa-bolt" id="uno"></li></a>
                                 <a href="#t2"><li class="icon fa fa-keyboard-o" id="dos"></li></a>
-                                <a href="#t3"><li class="icon fa fa-file-alt" id="tres"></li></a>
+                                <a href="#t3"><li class="fas fa-address-card" id="tres"></li></a>
                                 <a href="#t4"><li class="icon fa fa-folder-open" id="cuatro"></li></a>
                                 <a href="#t5"><li class="icon fa fa-map-marker" id="cinco"></li></a>
                             </ul>
