--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
     <body>
 
-        <div class="ct" id="t1">
+        <div class="ct" id="t1" class='masthead-image' id='master-container'>
             <div class="ct" id="t2">
                 <div class="ct" id="t3">
                     <div class="ct" id="t4">
                         <div class="ct" id="t5">
                             <ul id="menu">
                                 <a href="#t1"><li class="icon fa fa-bolt" id="uno"></li></a>
-                                <a href="#t2"><li class="icon fa fa-keyboard-o" id="dos"></li></a>
+                                <a href="#t2"><li class="icon fas fa-phone" id="dos"></li></a>
                                 <a href="#t3"><li class="icon fas fa-brain" id="tres"></li></a>
                                 <a href="#t4"><li class="icon fa fa-folder-open" id="cuatro"></li></a>
                                 <a href="#t5"><li class="icon fa fa-map-marker" id="cinco"></li></a>
@@ -95,10 +95,11 @@
                                 </div>
                             </div>
                             <div class="page" id="p2">
-                                <section class="icon fa fa-keyboard-o"><span class="title">contactanos</span></section>
+                                <section class="icon fas fa-phone"><span class="title">contactanos</span></section>
                             </div>
                             <div class="page" id="p3">
-                                <section class="icon fa fa-rocket"><span class="title">curriculo</span></section>
+
+                                <section class="icon fas fa-brain"><span class="title">curriculo</span></section>
                             </div>
                             <div class="page" id="p4">
                                 <div class="section noise">
