inicio css html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <body>
 
-        <div class="ct" id="t1" class='masthead-image' id='master-container'>
+        <div class='masthead-image' id="t1"  id='master-container'>
             <div class="ct" id="t2">
                 <div class="ct" id="t3">
                     <div class="ct" id="t4">
@@ -50,10 +50,7 @@
                                 <a href="#t5"><li class="icon fa fa-map-marker" id="cinco"></li></a>
                             </ul>
                             <div class="page" id="p1">
-                                <div class="hint">
-
-
-                                    <div class='masthead-image' id='master-container'>
+                                <div class="hint">                                    
                                         <div class='content center'>
                                             <h1 id='master'>
                                                 <div>Javier Muñoz</div>
@@ -90,7 +87,7 @@
                                                 <div>gracias por visitarnos.</div>
                                             </h1>
                                         </div>
-                                    </div>
+
 
                                 </div>
                             </div>
