inicuio con a.class:hover

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <a href="#t5"><li class="icon fa fa-map-marker" id="cinco"></li></a>
                             </ul>
                             <div class="page" id="p1">
-                                <div class="hint">                                    
+                                <div class="hint">
                                         <div class='content center'>
                                             <h1 id='master'>
                                                 <div>Javier Muñoz</div>
@@ -133,7 +133,10 @@
 
 
         <script  src="js/maps.js"></script>
-        <script>  $(function(){
+
+        <script  src="js/inicio.js"></script>
+        <script>
+        $(function(){
           var section = $(document).on('mouseenter mouseleave','.section:not(.open) .skew', function(){
               section.toggleClass('active');
           }).on('click', '.skew:not(.open)', function(e){
@@ -147,7 +150,6 @@
           })
           .find('.section');
         })</script>
-            <script  src="js/inicio.js"></script>
 
 
 
